[package]
name = "otterhound"
version = "0.1.0"
authors = ["Colin Reeder <colin@vpzom.click>"]
edition = "2018"

[[bin]]
name = "otterhound_dev_poll"
path = "src/dev_poll.rs"

[dependencies]
serde_json = "1.0.40"
serde = "1.0.97"
futures = "0.1.28"
base64 = "0.10.1"
hyper = "0.12.33"
hyper-tls = "0.3.2"
tokio = "0.1.22"
serde_derive = "1.0.97"
percent-encoding = "1.0.1"
bb8 = "0.3.0"
bb8-postgres = "0.3.0"
tokio-postgres = "0.4.0-rc.3"
